tests/ui/error-codes/E0109.stderr
error[E0109]: type arguments are not allowed on builtin type `u32`
  --> $DIR/E0109.rs:1:14
   |
LL | type X = u32<i32>;
   |          --- ^^^ type argument not allowed
   |          |
   |          not allowed on builtin type `u32`
   |
help: primitive type `u32` doesn't have generic parameters
   |
LL - type X = u32<i32>;
LL + type X = u32;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0109`.
