tests/ui/error-codes/E0109.rs
type X = u32<i32>; //~ ERROR E0109

fn main() {
}
